# yahoo-finance-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
analytics/: CMakeLists.txt  main.cpp  reader.hpp
downloader/: CMakeLists.txt  main.cpp
